# Store

./: README.md  data.json  data_blog.json  data_catalog.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_creation_date_alter_blogpost_views.py  0003_blogpost_slug_alter_blogpost_creation_date_and_more.py  0004_alter_blogpost_creation_date.py  0005_alter_blogpost_creation_date.py  0006_alter_blogpost_creation_date.py  0007_alter_blogpost_creation_date.py  0008_alter_blogpost_creation_date_and_more.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_alter_category_description.py  0002_product_manufactured_at.py  0003_alter_product_category.py  0004_alter_product_created_at_alter_product_updated_at.py  0005_alter_product_category.py  0006_version.py  0007_rename_is_active_version_active.py  0008_alter_version_product.py  0009_product_user.py
catalog/templates/catalog/: base.html  contacts.html  details.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_activate_token.py  0003_remove_user_is_active.py  0004_user_is_active.py  0005_alter_user_options.py
(+6 files in other folders)
